Migrate five modules to Spring Boot 3.5, Spring Cloud 2025.0 and Java 21
config-server, service-registry, catalog-service, inventory-service and
order-service were on Spring Boot 2.0.0.RELEASE (March 2018), Spring Cloud
Finchley.M8 - a milestone build, resolved from repo.spring.io/milestone - and
Java 8. Everything below follows from moving them onto supported versions.

Netflix stack out:

- Hystrix has been out of maintenance since 2018 and is gone from Spring
  Cloud. catalog-service's two guarded calls are now Resilience4j
  @CircuitBreaker, whose fallbacks take the causing Throwable, and the
  hystrix.command.* thresholds become resilience4j.circuitbreaker.instances.*.
- ContextCopyHystrixConcurrencyStrategy is deleted. It existed only to copy a
  correlation id onto Hystrix's own thread pool; Resilience4j runs the call on
  the caller's thread, so the ThreadLocal is simply still there.
- Hystrix bounded the call with execution.isolation.thread.timeoutInMilliseconds.
  Resilience4j has no equivalent for a blocking call, so the bound moves to
  where the blocking happens: the RestTemplate read timeout.
- InventoryController's @HystrixCommand annotations are removed rather than
  ported. They wrapped the service's own local database calls and declared no
  fallback.
- @EnableCircuitBreaker was removed in Spring Cloud 2020.

Sleuth and spring-cloud-starter-zipkin were removed in Spring Cloud 2022;
Micrometer Tracing with the Brave bridge replaces them, and the properties
move from spring.sleuth.* / spring.zipkin.* to management.*.

bootstrap.properties has not been read since Spring Cloud 2020 removed the
bootstrap context, so those files were silently doing nothing. Config server
and Vault are now reached through spring.config.import, marked optional so the
services still start - and the tests still boot a context - with neither
running.

Also required by the version jump: javax.* to jakarta.*, JUnit 4 and
SpringRunner to JUnit 5, mysql-connector-java to com.mysq